Updated about info + new resume

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <h1>About Me</h1>
       <div class="about-me">
         <p>
-          Hi, I'm Adam Demol, Woolworths Manager of 7 years, looking for a major career change into the world of web.
+          Hi, I'm Adam Demol, Woolworths Manager of 7+ years, looking for a major career change into the world of web.
           Hoping to secure a <u>junior front-end developer role.</u>
         </p><br>
         <p>
@@ -100,7 +100,9 @@
           testing and more. But you're here too see my work, so take a look at <a href="#Projects">my projects.</a>
         </p><br>
         <p>
-          If you like what see, <a href="#contact">send me an email or message me on LinkedIn.</a> Looking forward to meeting you. 
+          If you like what see, <a href="#contact">send me an email.</a> 
+          You can also find my <a href="./img/resume.pdf">resume</a> here.
+          Looking forward to connecting with you. 
         </p>
     </section>
 
@@ -196,6 +198,7 @@
               Rotatable card, using mouse drag to preview a 3D pokemon card. As the card moves the
               holographic effect changes.
             </p>
+            <a href="https://github.com/adamdgit/holographic-card-3D">Github code.</a>
           </div>
         </div>
       </div>
