--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="about-me">
         <p>
           Hi, I'm Adam Demol, Woolworths Manager of 7+ years, looking for a major career change into the world of web.
-          Hoping to secure a <u>junior front-end developer role.</u>
+          Looking to secure a <u>junior front-end developer role.</u>
         </p><br>
         <p>
           I've studied Web development at North Sydney TAFE where I learned object-oriented PHP, JQuery, MySQL, HTML5 & CSS3.
