--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="description"
     content="I'm an aspiring Web Developer based in Sydney Australia. I love learning new languages and developing my skills around web technologies. Currently looking for a front-end development job.">
-  <meta name="keywords" content="Adam Demol, Web, Design, Designer, Portfolio, Developer, Sydney, NSW, Australia, Javascript, React, HTML, CSS, Graphic design">
+  <meta name="keywords" content="Adam Demol, Web, Design, Portfolio, Developer, Sydney, NSW, Australia, Javascript, Typescript, React, HTML, CSS, Graphic design">
   <meta name="author" content="Adam Demol">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/img/favicon.ico" />
