Added new item to gallery

--- a/index.html
+++ b/index.html
@@ -207,20 +207,23 @@
     <section id="Gallery" class="design-gallery">
       <h1>Graphic Design</h1>
       <div class="gallery">
-        <a href="./img/gallery1.webp" target="_blank" class="gallery-img img1" aria-label="Gallery image">
-          <img src="./img//gallery1.webp" alt="" />
+        <a href="./img/gallery1.webp" target="_blank" class="gallery-img img1" >
+          <img src="./img//gallery1.webp" alt="Gallery image" />
         </a>
-        <a href="./img/gallery2.jpg" target="_blank" class="gallery-img img2" aria-label="Gallery image">
-          <img src="./img//gallery2.jpg" alt="" />
+        <a href="./img/gallery2.jpg" target="_blank" class="gallery-img img2">
+          <img src="./img//gallery2.jpg" alt="Gallery image" />
         </a>
-        <a href="./img/gallery3.webp" target="_blank" class="gallery-img img3" aria-label="Gallery image">
-          <img src="./img//gallery3.webp" alt="" />
+        <a href="./img/gallery3.webp" target="_blank" class="gallery-img img3">
+          <img src="./img//gallery3.webp" alt="Gallery image" />
         </a>
-        <a href="./img/gallery4.webp" target="_blank" class="gallery-img img4" aria-label="Gallery image">
-          <img src="./img//gallery4.webp" alt="" />
+        <a href="./img/gallery4.webp" target="_blank" class="gallery-img img4">
+          <img src="./img//gallery4.webp" alt="Gallery image" />
         </a>
-        <a href="./img/gallery5.webp" target="_blank" class="gallery-img img5" aria-label="Gallery image">
-          <img src="./img//gallery5.webp" alt="" />
+        <a href="./img/gallery5.webp" target="_blank" class="gallery-img img5">
+          <img src="./img//gallery5.webp" alt="Gallery image" />
+        </a>
+        <a href="./img/gallery6.webp" target="_blank" class="gallery-img img6">
+          <img src="./img//gallery6.webp" alt="Gallery image" />
         </a>
       </div>
     </section>
