Updated title meta tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Adam Demol: Web Designer / Developer, Sydney - Looking for work</title>
+  <title>Adam Demol - Web Dev, Sydney, Looking for work</title>
   <meta charset="UTF-8">
   <meta name="description"
     content="I'm an aspiring Web Developer based in Sydney Australia. I love learning new languages and developing my skills around web technologies. Currently looking for a front-end development job.">
