Replaced with new 3d card effect

--- a/holocard/index.html
+++ b/holocard/index.html
@@ -5,20 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script defer src="app.js"></script>
-  <link rel="stylesheet" href="styles.css">
+  <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
 
-  <h1>Click and drag to move the card in 3D</h1>
-
-  <div class="card-wrap">
-    <div class="card-rotate">
-      <span class="cardback"></span>
-      <span class="bg"></span>
+  <a 
+    href="https://www.deviantart.com/rhythmax/art/Gyarados-354908157" 
+    class="link"
+    target="_blank">
+    Art by RhythmAx
+  </a>
+  
+  <div class="perspective">
+    <div class="card-wrapper">
+      <span class="large"></span>
       <span class="gradient"></span>
     </div>
   </div>
-
+  
 </body>
 </html>
