Updated new card effect project info

--- a/index.html
+++ b/index.html
@@ -192,13 +192,12 @@
             </button>
           </div>
           <div class="right">
-            <h2>Interactive 3D holographic card</h2>
-            <h3>Javscript, CSS3</h3>
+            <h2>3D card hover effect</h2>
+            <h3>CSS3</h3>
             <p>
-              Rotatable card, using mouse drag to preview a 3D pokemon card. As the card moves the
-              holographic effect changes.
+              Pokemon Card which has a simple but beautiful 3D effect on hover, using pure CSS animations.
             </p>
-            <a href="https://github.com/adamdgit/holographic-card-3D">Github code.</a>
+            <a href="https://github.com/adamdgit/3d-card">Github code.</a>
           </div>
         </div>
       </div>
