Added readonly tag to prevent keyboard input

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -16,7 +16,7 @@
         <div class="form-group">
           <span class="input-wrap">
             <label for="selected-dates">Select Dates:</label>
-            <input id="selected-dates" type="text" class="datepicker-input">
+            <input id="selected-dates" type="text" class="datepicker-input" readonly>
             <svg 
               xmlns="http://www.w3.org/2000/svg" 
               width="25px"
