--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <div class="about-me">
         <p>
           Hi, I'm Adam Demol, Woolworths Manager of 7+ years, looking for a major career change into the world of web.
-          Looking to secure a <u>junior front-end developer role.</u>
+          Looking to secure a <i>web developer role.</i>
         </p><br>
         <p>
           I've studied Web development at North Sydney TAFE where I learned object-oriented PHP, JQuery, MySQL, HTML5 & CSS3.
@@ -104,6 +104,7 @@
           You can also find my <a href="./img/resume.pdf">resume</a> here.
           Looking forward to connecting with you. 
         </p>
+      </div>
     </section>
 
     <section id="Projects" class="content-section projects">
@@ -122,8 +123,10 @@
             <h2>Spotify web player</h2>
             <h3>React</h3>
             <p>
-              Spotify Web App. Video demo available. Explore new music, play your favourite playlists,
-              edit playlists, search for music and more.
+              A re-imagined version of Spotify, made using React. Uses the official Spotify API
+              to connect your account and manage your music. Explore new artists, find new songs 
+              and follow new playlists. Create new playlists or edit existing ones with in-built 
+              drag & drop to organise your music. 
             </p>
             <a href="https://github.com/adamdgit/Spotify-Music-player">Github code.</a>
           </div>
@@ -140,9 +143,9 @@
             <h2>Picture puzzle game</h2>
             <h3>Javacript</h3>
             <p>
-              A javascript re-creation of the sliding puzzle board game. Upload an image,
-              it gets shuffled, re-asamble the original image to win.
-              Whats the best score you can get?
+              Upload an image or take a photo to play. Your image gets sliced into squares 
+              and each square is shuffled, re-create the original image by sliding the pieces 
+              around the board to win. Whats the fastest time you can get?
             </p>
             <a href="https://github.com/adamdgit/Picture-Puzzle">Github code.</a>
           </div>
@@ -159,8 +162,9 @@
             <h2>Calendar, date picker</h2>
             <h3>Javacript</h3>
             <p>
-              Opens a hidden calendar modal which allows a user to select a range of dates. 
-              Defaults to the current month & day, selected dates are displayed in an input box.
+              A simple but powerful Calendar. Allows for single date selection or range selection.
+              Ease to use, 2 clicks to select dates between a range. Displays dates selected as well 
+              as highlighting current day.
             </p>
             <a href="https://github.com/adamdgit/datepicker">Github code.</a>
           </div>
@@ -177,8 +181,8 @@
             <h2>Infinite loop carousel</h2>
             <h3>Javascript</h3>
             <p>
-              Looping content carousel, slides left and right through content. Loops seamlessly.
-              Scales to any screen size.
+              A simple but clean infinitely looping content carousel, slides left and right through content. 
+              Loops seamlessly. Scales to any screen size.
             </p>
             <a href="https://github.com/adamdgit/content-slider">Github code.</a>
           </div>
@@ -195,7 +199,8 @@
             <h2>3D card hover effect</h2>
             <h3>CSS3</h3>
             <p>
-              Pokemon Card which has a simple but beautiful 3D effect on hover, using pure CSS animations.
+              Pure CSS 3D hover effect. Demonstrated with a Pokemon card design in which the 
+              Pokemon pops-out of the card on hover. 
             </p>
             <a href="https://github.com/adamdgit/3d-card">Github code.</a>
           </div>
