updated about me info

--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
       <div class="about-me">
         <p>
           Hi, I'm Adam Demol, Woolworths Manager of 7+ years, looking for a major career change into the world of web.
-          Looking to secure a <i>web developer role.</i>
+          Looking to secure a <i>front or back end Web Developer role.</i>
         </p><br>
         <p>
           I've completed a Diploma of Web Development at North Sydney TAFE where I 
           learned object-oriented PHP, JQuery, MySQL, HTML5 & CSS3.
+        </br>
           Currently I'm working on many projects involving React, Svelte, Javascript, 
           Typescript, Next.jS, Prisma, MySQL via Planetscale, HTML, CSS and testing 
           libraries. You can find <a href="#Projects">my completed projects</a> below 
