Updated about me info

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <header id="header">
     <div class="header-text">
       <p>Adam Demol</p>
-      <p>Web & Graphic Design</p>
+      <p>Web Developer</p>
     </div>
   </header>
 
@@ -91,19 +91,20 @@
       <h1>About Me</h1>
       <div class="about-me">
         <p>
-          Hi, I'm Adam Demol, Woolworths Manager of 7+ years, looking for a major career change into the world of web.
-          Looking to secure a <i>front or back end Web Developer role.</i>
+          I'm Adam Demol, Woolworths Manager of 7+ years, looking for a major career 
+          change into the world of web. Currently searching for a 
+          <i>junior Web Developer role.</i>
         </p><br>
         <p>
           I've completed a Diploma of Web Development at North Sydney TAFE where I 
           learned object-oriented PHP, JQuery, MySQL, HTML5 & CSS3.
-        </br>
-          Currently I'm working on many projects involving React, Svelte, Javascript, 
+          Right now I'm working on many projects involving React, Svelte, Javascript, 
           Typescript, Next.jS, Prisma, MySQL via Planetscale, HTML, CSS and testing 
-          libraries. You can find <a href="#Projects">my completed projects</a> below 
-          and others in progress on <a href="https://github.com/adamdgit">Github</a>.
+          libraries.
         </p><br>
         <p>
+          You can take a look at <a href="#Projects">my completed projects</a> below 
+          and much more on <a href="https://github.com/adamdgit">Github</a>.
           If you like what see, <a href="#contact">send me an email.</a> 
           You can also find my <a href="./img/resume.pdf">resume</a> here.
           Looking forward to connecting with you. 
@@ -218,7 +219,7 @@
             </button>
           </div>
           <div class="right">
-            <h2>3D card hover effect</h2>
+            <h2>3D Card Animation</h2>
             <h3>CSS3</h3>
             <p>
               Pure CSS 3D hover effect. Demonstrated with a Pokemon card design in which the 
