Updated about me section + new call to action btn

--- a/index.html
+++ b/index.html
@@ -97,18 +97,13 @@
         </p><br>
         <p>
           I've completed a Diploma of Web Development at North Sydney TAFE where I 
-          learned object-oriented PHP, JQuery, MySQL, HTML5 & CSS3.
+          learned object-oriented PHP, JQuery, MySQL, HTML5 & CSS3.<br>
           Right now I'm working on many projects involving React, Svelte, Javascript, 
-          Typescript, Next.jS, Prisma, MySQL via Planetscale, HTML, CSS and testing 
-          libraries.
-        </p><br>
-        <p>
-          You can take a look at <a href="#Projects">my completed projects</a> below 
+          Typescript, Next.jS, Prisma, SQL database via Planetscale, HTML, CSS and testing 
+          libraries. You can find <a href="#Projects">my completed projects</a> below 
           and much more on <a href="https://github.com/adamdgit">Github</a>.
-          If you like what see, <a href="#contact">send me an email.</a> 
-          You can also find my <a href="./img/resume.pdf">resume</a> here.
-          Looking forward to connecting with you. 
         </p>
+        <button class="contact-me-btn"><a href="#contact">Get in touch</a></button>
       </div>
     </section>
 
