--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="Adam Demol, Web, Design, Portfolio, Developer, Sydney, NSW, Australia, Javascript, Typescript, React, HTML, CSS, Graphic design">
   <meta name="author" content="Adam Demol">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="/img/favicon.ico" />
+  <link rel="icon" href="/img/favicon.png" />
   <link href="css/index.css" rel="stylesheet" media="all" />
   <link href="css/media-small.css" rel="stylesheet" media="all" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap">
