Updated header background image

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
         </p><br>
         <p>
           I've completed a Diploma of Web Development at North Sydney TAFE where I 
-          learned object-oriented PHP, JQuery, MySQL, HTML5 & CSS3.<br>
+          learned object-oriented PHP, JQuery, MySQL, HTML5 & CSS3.
+        </p><br>
+        <p>
           Right now I'm working on many projects involving React, Svelte, Javascript, 
           Typescript, Next.jS, Prisma, SQL database via Planetscale, HTML, CSS and testing 
           libraries. You can find <a href="#Projects">my completed projects</a> below 
