Lazy loading on images, font import moved

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Adam Demol - Web Dev, Sydney, Looking for work</title>
   <meta charset="UTF-8">
   <meta name="description"
-    content="I'm an aspiring Web Developer based in Sydney Australia. I love learning new languages and developing my skills around web technologies. Currently looking for a front-end development job.">
+    content="I'm an aspiring Web Developer based in Sydney Australia. Currently looking for a web development role.">
   <meta name="keywords" content="Adam Demol, Web, Design, Portfolio, Developer, Sydney, NSW, Australia, Javascript, Typescript, React, HTML, CSS, Graphic design">
   <meta name="author" content="Adam Demol">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,6 @@
   <link rel="icon" href="/img/favicon.png" />
   <link href="css/index.css" rel="stylesheet" media="all" />
   <link href="css/media-small.css" rel="stylesheet" media="all" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap">
   <script src="js/scrollAnimations.js" defer></script>
   <script src="js/observers.js" defer></script>
 </head>
@@ -184,22 +183,22 @@
       <h1>Graphic Design</h1>
       <div class="gallery">
         <a href="./img/gallery1.webp" target="_blank" class="gallery-img img1" >
-          <img src="./img//gallery1.webp" alt="Gallery image" />
+          <img src="./img//gallery1.webp" alt="Gallery image" loading="lazy" />
         </a>
         <a href="./img/gallery2.jpg" target="_blank" class="gallery-img img2">
-          <img src="./img//gallery2.jpg" alt="Gallery image" />
+          <img src="./img//gallery2.jpg" alt="Gallery image" loading="lazy" />
         </a>
         <a href="./img/gallery3.webp" target="_blank" class="gallery-img img3">
-          <img src="./img//gallery3.webp" alt="Gallery image" />
+          <img src="./img//gallery3.webp" alt="Gallery image" loading="lazy" />
         </a>
         <a href="./img/gallery4.webp" target="_blank" class="gallery-img img4">
-          <img src="./img//gallery4.webp" alt="Gallery image" />
+          <img src="./img//gallery4.webp" alt="Gallery image" loading="lazy" />
         </a>
         <a href="./img/gallery5.webp" target="_blank" class="gallery-img img5">
-          <img src="./img//gallery5.webp" alt="Gallery image" />
+          <img src="./img//gallery5.webp" alt="Gallery image" loading="lazy" />
         </a>
         <a href="./img/gallery6.webp" target="_blank" class="gallery-img img6">
-          <img src="./img//gallery6.webp" alt="Gallery image" />
+          <img src="./img//gallery6.webp" alt="Gallery image" loading="lazy" />
         </a>
       </div>
     </section>
@@ -223,6 +222,8 @@
     </section>
 
   </main>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap">
 
 </body>
 </html>
