Updated to new theme and header background

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <link rel="icon" href="/img/favicon.png" />
   <link href="css/index.css" rel="stylesheet" media="all" />
   <link href="css/media-small.css" rel="stylesheet" media="all" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
   <script src="js/scrollAnimations.js" defer></script>
   <script src="js/observers.js" defer></script>
 </head>
@@ -321,8 +324,6 @@
     </section>
 
   </main>
-
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap">
 
 </body>
 </html>
