Updated header text about me

--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
 
   <header id="header">
     <div class="header-text-wrap">
-      <h1>I build beautiful, lightweight websites<br>and powerful React apps</h1>
+      <h1>I build beautiful, lightweight websites<br>and powerful Javascript apps</h1>
       <p class="header-text">
-        I'm <span class="name-large">Adam Demol,</span> a front end developer who 
-        specialises in React and Javascript, with a background in PHP. 
-        Passionate about UI/UX and design, constantly working on new projects and learning new technologies. 
+        I'm <span class="name-large">Adam Demol,</span> a web developer with 
+        a passion for design and hunger for knowledge. I'm constantly 
+        upgrading my skills and learning new web technologies. I have experience with 
+        Typescript, React, NextJs, SolidJS, Python and learning a little Rust on the side.
       </p>
 
       <span class="header-btns-wrap">
