--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm231-113.9L103.5 277.6c-9.4 9.4-9.4 24.6 0 33.9l17 17c9.4 9.4 24.6 9.4 33.9 0L256 226.9l101.6 101.6c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L273 142.1c-9.4-9.4-24.6-9.4-34 0z"/></svg>
   </a>
   <nav>
-    <span class="nav-header">Adam Demol</span>
     <ul>
       <li>
         <a href="https://www.linkedin.com/in/adam-demol-abb822259/" target="_blank" role="button" aria-label="Find me on LinkedIn">
@@ -46,10 +45,11 @@
 
   <header>
     <div class="headline">
-      <h1 id="heading">I'm Adam</h1>
+      <h1 id="heading">I'm Adam Demol</h1>
       <p class="header-text">
         Full stack web developer <br>
-        I build beautiful, lightweight websites and powerful Javascript applications
+        I build beautiful, lightweight websites and <br>
+        powerful Javascript applications
       </p>
       <a class="cta" href="mailto:adam_d@outlook.com?subject=Email from web portfolio:" role="button" aria-label="Email me with Microsoft Outlook">
         Send an Email
