Added new images from unsplash, cleaned up styles

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -25,17 +25,24 @@
 
     <main>
       <div class="difficulty">
-        <h2 style="text-align: center;">Select Difficulty:</h2>
+        <h2>Select Difficulty:</h2>
         <div class="difficulty-wrap">
-          <div class="difficulty-text">
-            <span>Easy</span><span>Medium</span><span>Hard</span>
+          <div class="difficulty-item">
+            <span>Easy</span>
+            <img src="parot.jpg" alt="easy difficulty image" id="easy" height="200px" width="200px">
           </div>
-          <div class="difficulty-images">
-            <img src="yaksparrow.png" alt="easy difficulty image" id="easy" height="200px" width="200px">
-            <img src="wave.jpg" alt="medium difficulty image" id="medium" height="200px" width="200px">
-            <img src="pillars.jpg" alt="hard difficulty image" id="hard" height="200px" width="200px">
+
+          <div class="difficulty-item">
+            <span>Medium</span>
+            <img src="zebra.jpg" alt="medium difficulty image" id="medium" height="200px" width="200px">
+          </div>
+
+          <div class="difficulty-item">
+            <span>Hard</span>
+            <img src="forest.jpg" alt="hard difficulty image" id="hard" height="200px" width="200px">
           </div>
         </div>
+        <p>Images from <a href="https://unsplash.com/">unsplash</a>.</p>
       </div>
 
       <div class="selected-image"></div>
