added small images for smaller devices

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -30,16 +30,19 @@
           <div class="difficulty-item">
             <span>Easy</span>
             <img src="parot.jpg" alt="easy difficulty image" id="easy" height="200px" width="200px">
+            <img src="parot-small.jpg" alt="easy difficulty image" id="easy-sm" height="300px" width="300px">
           </div>
 
           <div class="difficulty-item">
             <span>Medium</span>
             <img src="zebra.jpg" alt="medium difficulty image" id="medium" height="200px" width="200px">
+            <img src="zebra-small.jpg" alt="medium difficulty image" id="medium-sm" height="300px" width="300px">
           </div>
 
           <div class="difficulty-item">
             <span>Hard</span>
             <img src="forest.jpg" alt="hard difficulty image" id="hard" height="200px" width="200px">
+            <img src="forest-small.jpg" alt="hard difficulty image" id="hard-sm" height="300px" width="300px">
           </div>
         </div>
         <p>Images from <a href="https://unsplash.com/">unsplash</a>.</p>
