Fixed event listener problem and improved styles

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -19,7 +19,7 @@
         <li>2. Recreate your original image with the blank tile at the bottom right of the board</li>
         <li>3. Try get the fastest time you can, good luck!</li>
       </ul>
-      <img src="tutorial.gif" alt="GIF demonstrating how to slide a tile" width="400px" />
+      <img src="images/tutorial.gif" alt="GIF demonstrating how to slide a tile" width="400px" />
       <button class="end-intro">Ok, let's play</button>
     </div>
 
@@ -29,20 +29,20 @@
         <div class="difficulty-wrap">
           <div class="difficulty-item">
             <span>Easy</span>
-            <img src="parot.jpg" alt="easy difficulty image" id="easy" height="200px" width="200px">
-            <img src="parot-small.jpg" alt="easy difficulty image" id="easy-sm" height="300px" width="300px">
+            <img src="images/parot.jpg" alt="easy difficulty image" id="easy" height="200px" width="200px">
+            <img src="images/parot-small.jpg" alt="easy difficulty image" id="easy-sm" height="300px" width="300px">
           </div>
 
           <div class="difficulty-item">
             <span>Medium</span>
-            <img src="zebra.jpg" alt="medium difficulty image" id="medium" height="200px" width="200px">
-            <img src="zebra-small.jpg" alt="medium difficulty image" id="medium-sm" height="300px" width="300px">
+            <img src="images/zebra.jpg" alt="medium difficulty image" id="medium" height="200px" width="200px">
+            <img src="images/zebra-small.jpg" alt="medium difficulty image" id="medium-sm" height="300px" width="300px">
           </div>
 
           <div class="difficulty-item">
             <span>Hard</span>
-            <img src="forest.jpg" alt="hard difficulty image" id="hard" height="200px" width="200px">
-            <img src="forest-small.jpg" alt="hard difficulty image" id="hard-sm" height="300px" width="300px">
+            <img src="images/forest.jpg" alt="hard difficulty image" id="hard" height="200px" width="200px">
+            <img src="images/forest-small.jpg" alt="hard difficulty image" id="hard-sm" height="300px" width="300px">
           </div>
         </div>
         <p>Images from <a href="https://unsplash.com/">unsplash</a>.</p>
@@ -52,7 +52,6 @@
 
       <div class="game-wrap">
         <h2>Re-create your image</h2>
-        <img id="resized-image" alt="resized user uploaded image"/>
         <canvas id="canvas"></canvas>
 
         <div id="board" class="grid-size16"></div>
@@ -62,13 +61,13 @@
           <span id="timer-mins">00</span><span>:</span><span id="timer-secs">00</span>
         </div>
 
-        <button id="show-btn">Show Highscores</button>
+        <button class="show-btn">Show Highscores</button>
         <div class="highscore-wrap hide">
           <span class="highscores">
             <h2>Your Highscores!</h2>
-            <div id="highscore-list">
-            </div>
-            <button id="hide-btn">Close</button>
+            <ul class="highscore-list">
+            </ul>
+            <button class="hide-btn">Close</button>
           </span>
         </div>
       </div>
