--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         powerful Javascript applications
       </p>
       <a class="cta" href="mailto:adam_d@outlook.com?subject=Email from web portfolio:" role="button" aria-label="Email me with Microsoft Outlook">
-        Send an Email
+        Get in touch
       </a>
     </div>
   </header>
