--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
       <p class="header-text">
         I specialise in React, Typescript and creating beautiful web interfaces.<br>
-        Welcome to my portfolio, hosted from my <span style="color: var(--colour4);">Rasberry Pi</span>
+        Welcome to my portfolio, hosted from my <span style="color: var(--colour4);">Raspberry Pi</span>
       </p>
       <a class="cta" href="mailto:adam_d@outlook.com?subject=Email from web portfolio:" role="button" aria-label="Email me with Microsoft Outlook">
         Email me
