fixed mobile styles and added dropdown menu

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
   <nav>
     <div class="nav-hero">
       Adam Demol
+      <button class="mobile-dropdown-toggle">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentcolor" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M16 132h416c8.8 0 16-7.2 16-16V76c0-8.8-7.2-16-16-16H16C7.2 60 0 67.2 0 76v40c0 8.8 7.2 16 16 16zm0 160h416c8.8 0 16-7.2 16-16v-40c0-8.8-7.2-16-16-16H16c-8.8 0-16 7.2-16 16v40c0 8.8 7.2 16 16 16zm0 160h416c8.8 0 16-7.2 16-16v-40c0-8.8-7.2-16-16-16H16c-8.8 0-16 7.2-16 16v40c0 8.8 7.2 16 16 16z"/></svg>
+      </button>
     </div>
-    <ul>
+    <ul class="navbar">
       <div class="nav-header">Sections</div>
       <hr>
       <li>
