minor style improvements

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
 
         <div class="project-card">
-          <h2>Picture puzzle game</h2>
+          <h2>Picture Puzzle Game</h2>
           <h3>Javacript, HTML, CSS</h3>
           <p>Upload an image or take a photo to play. Your image gets sliced into squares and each square is shuffled, re-create the original image by sliding the pieces around the board to win. Whats the fastest time you can get?</p>
           <div class="project-btns">
@@ -190,7 +190,7 @@
         </div>
 
         <div class="project-card">
-          <h2>Loan Calculator Visualiser</h2>
+          <h2>Loan Calculator</h2>
           <h3>React, HTML, CSS</h3>
           <p>Clean and simple loan payment calculator app. Built in React with a borrowed / interest comparison pie chart.</p>
           <div class="project-btns">
@@ -203,7 +203,7 @@
         </div>
 
         <div class="project-card">
-          <h2>Calendar, date picker</h2>
+          <h2>Date Picker</h2>
           <h3>Javacript, HTML, CSS</h3>
           <p>A simple but powerful Calendar. Allows for single date selection or range selection. Ease to use, 2 clicks to select dates between a range. Displays dates selected as well as highlighting current day.</p>
           <div class="project-btns">
@@ -216,7 +216,7 @@
         </div>
 
         <div class="project-card">
-          <h2>Infinite loop carousel</h2>
+          <h2>Looping Image Carousel</h2>
           <h3>Javascript, HTML, CSS</h3>
           <p>A simple but clean infinitely looping content carousel, slides left and right through content. Loops seamlessly. Scales to any screen size.</p>
           <div class="project-btns">
@@ -229,7 +229,7 @@
         </div>
 
         <div class="project-card">
-          <h2>3D Gallery</h2>
+          <h2>3D Image Gallery</h2>
           <h3>Javascript, HTML, CSS</h3>
           <p>3D image gallery with seamless looping. Images are rotated around a point, emulating a circle. Images at the back of the circle are hidden as they move out of view, and shown again just before they appear back into view.</p>
           <div class="project-btns">
@@ -246,8 +246,19 @@
 
     <section class="about" id="about">
       <h1>About</h1>
-      <p></p>
-      <p>Created by Adam Demol - 2024</p>
+      <div class="about-content">
+        <p>
+          I'm Adam Demol, I've been building websites for over 10 years, 
+          with a background working in PHP, Jquery and MysQL.
+          <br>
+          In recent years I have been studying and achieved a Diploma of Advanced Programming, 
+          Certificate IV in Information Technology and a Certificate of completion for Harvard's 
+          CS50x course.
+        </p>
+        <p>Currently seeking a full-stack web developer role.</p>
+        <hr>
+        <p>Created by Adam Demol - 2024</p>
+      </div>
     </section>
   </main>
 
