--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     </section>
 
     <section class="about" id="about">
-      <h1>About</h1>
+      <h1>About Me</h1>
       <div class="about-content">
         <p>
           I'm Adam Demol, I've been building websites for over 10 years, 
