Updated about section

--- a/index.html
+++ b/index.html
@@ -255,6 +255,12 @@
           Certificate IV in Information Technology and a Certificate of completion for Harvard's 
           CS50x course.
         </p>
+        <p>
+          Right now I primarily work with JavaScript/TypeScript and React/NextJs,
+          Building full-stack applications. Otherwise I spend my time learning new technologies
+          or languages such as Go-lang, Python, Docker or alternative front-end 
+          frameworks like Svelte.
+        </p>
         <p>Currently seeking a full-stack web developer role.</p>
         <hr>
         <p>Created by Adam Demol - 2024</p>
